<resources>
    <string name="app_name">CLIURCHES</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="can_t_login">Can\'t login?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="receipts">Receipts</string>
    <string name="share_what_s_on_your_mind">Share what\'s on your mind?</string>
    <string name="snap_a_photo">Snap a Photo</string>
    <string name="open_from_gallery">Open from Gallery</string>
    <string name="walang_misa_ngayong_araw">Walang misa ngayong araw</string>
    <string name="select_mass">Select Mass</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque felis purus, dapibus at viverra nec, egestas vitae ipsum. In in risus mollis, iaculis mauris vitae, efficitur sem. Vivamus pharetra eleifend dui ac posuere. Maecenas in justo augue. Cras dignissim dui sit amet felis malesuada venenatis. Integer mattis ultrices lectus nec dignissim.</string>
   <string name="lorem_long">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="post">Post</string>
    <string name="match_result">MATCH RESULT</string>
    <string name="save_to_gallery">Save to Gallery</string>
    <string name="mass_reservation">MASS RESERVATION</string>
    <string name="selected_date">Selected Date</string>
    <string name="selected_time">Selected Time</string>
    <string name="name_of_recipient">Name of Recipient</string>
    <string name="choose_payment_method">Choose payment method</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="payment">PAYMENT</string>
    <string name="cliurches">CLIURCHES</string>
    <string name="identify">Identify</string>
    <string name="detalye_ng_pamisa">DETALYE NG PAMISA</string>
    <string name="additional_message">Additional Message</string>
    <string name="enter_message">Enter message</string>
    <string name="full_name">Full Name</string>
    <string name="admin_panel">ADMIN PANEL</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="pending_payment">Pending Payment</string>
    <string name="completed_payment">Completed Payment</string>
    <string name="schedule_mass">Schedule Mass</string>
    <string name="select_church">Select Church</string>
    <string name="completed_payment_caps">COMPLETED PAYMENT</string>
    <string name="pending_payment_caps">PENDING PAYMENT</string>
    <string name="mass_schedule">MASS SCHEDULE</string>
    <string name="padasal_para_kay">Padasal para kay</string>
    <string name="detalye_ng_pamisa_sentence">Detalye ng Pamisa</string>
    <string name="name">Name</string>
    <string name="reservation_list">Reservation List</string>
    <string name="set_payment_method">Set Payment Method</string>
    <string name="sort_by">Sort By</string>
    <string name="approved">Approved</string>
    <string name="declined">Declined</string>
    <string name="all_pending">All Pending</string>
    <string name="all_list">All list</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="please"><i>Please add details</i></string>
    <string name="please2"><i>Please contact church admin</i></string>
    <string name="notice">This AI-powered program has been designed to analyze data flow graphs and deduce the most likely location based on the image\'s features.</string>
    <string name="bauan">Bauan - Immaculate Concepcion Parish</string>
    <string name="bauan_desc">Bauan Catholic Church Immaculate Conception is a historic and well-known religious landmark located in the town of Bauan, Batangas, Philippines. Established in the late 16th century by Spanish Augustinian missionaries, the church\'s current facade combines Baroque and Neoclassical styles. Dedicated to the Immaculate Conception, the church\'s interior features religious art, including paintings, statues, and stained glass windows. The church\'s bell tower, built in the 1800s, showcases a unique blend of Spanish and Filipino influences. Today, the church serves as a place of worship for the local Catholic community and a popular tourist attraction. Its historical and cultural significance has been recognized by the Philippine government, which declared it a National Cultural Treasure in 2001.</string>
    <string name="bauan_googleSearch">https://www.google.com/search?q=Bauan+Immaculate+Conception+Parish&amp;client=firefox-b-d&amp;sxsrf=AJOqlzWSFdtE4tcZaHj0CVKfqigq7UhPSg%3A1677864941435&amp;ei=7S8CZNegGtfn-Qai5YDoBg&amp;ved=0ahUKEwiXy8L-pcD9AhXXc94KHaIyAG0Q4dUDCA8&amp;uact=5&amp;oq=Bauan+Immaculate+Conception+Parish&amp;gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzIECCMQJzIGCAAQCBAeMgYIABAIEB4yBggAEAgQHjICCCYyAggmMgUIABCGAzIFCAAQhgMyBQgAEIYDMgUIABCGA0oECEEYAFAAWK8yYOhEaABwAXgAgAFZiAGGBJIBATeYAQCgAQHAAQE&amp;sclient=gws-wiz-serp</string>
    <string name="bauan_maps">https://www.google.com/maps/place/Bauan+Catholic+Church+Immaculate+Conception/@13.7891858,121.0078704,15z/data=!4m5!3m4!1s0x0:0xb291bdb756cebd5e!8m2!3d13.7891858!4d121.0078704</string>
    <string name="aplaya">Aplaya - Our Mother of Perpetual Help Parish</string>
    <string name="aplaya_desc">Our Mother of Perpetual Help Parish is a Catholic church located in Aplaya Bauan, Batangas, Philippines. The church was established in 1988 and is dedicated to the Our Mother of Perpetual Help. It offers daily mass, confession, and Eucharistic adoration, and has a range of services and activities for its parishioners. The parish is particularly known for its Novena to Our Mother of Perpetual Help held every Wednesday. It also provides social services to the community and has a well-established Catholic school, the Our Mother of Perpetual Help Academy. Overall, the parish is a vibrant and active religious community that plays an important role in the spiritual and social life of the area.</string>
    <string name="aplaya_googleSearch">https://www.google.com/search?q=Aplaya+-+Our+lady+of+perpetual+help&amp;client=firefox-b-d&amp;sxsrf=AJOqlzWLvH7_S6ppsIcnLQD_WR-RYXxcJg%3A1677864795778&amp;source=hp&amp;ei=Wy8CZMSJLdSb4-EPwJeRkAE&amp;iflsig=AK50M_UAAAAAZAI9a_g848twgA95FJumKFF4D7voX2tu&amp;ved=0ahUKEwiEo4a5pcD9AhXUzTgGHcBLBBIQ4dUDCAg&amp;uact=5&amp;oq=Aplaya+-+Our+lady+of+perpetual+help&amp;gs_lcp=Cgdnd3Mtd2l6EAMyAggmOgQIIxAnOgsILhDHARCvARCRAjoHCC4Q1AIQQzoICAAQsQMQgwE6EQguEIAEELEDEIMBEMcBENEDOgUIABCABDoFCAAQkQI6CAgAELEDEJECOgQIABBDOg4ILhDHARCxAxDRAxCABDoLCAAQgAQQsQMQgwE6BQguEJECOgsILhCABBCxAxCDAToICAAQgAQQsQM6BwguEIAEEAo6BQguEIAEOgcIABCABBAKOgQILhBDOgsILhCABBDHARCvAToGCAAQFhAeOggIABAWEB4QDzoFCAAQhgNQAFj3iwFgtZIBaAJwAHgBgAGwB4gBy0iSAQ4xOS42LjEuNC4yLjMuM5gBAKABAqABAQ&amp;sclient=gws-wiz</string>
    <string name="aplaya_maps">https://www.google.com/maps/place/Our+Mother+of+Perpetual+Help+Parish+Church/@13.7814848,121.0092695,15z/data=!4m2!3m1!1s0x0:0xf658a95b52cde11?sa=X&amp;ved=2ahUKEwiDzp2Iu7_9AhUYF7cAHeE2C6AQ_BJ6BAheEAg</string>
    <string name="bolo">Bolo - Holy Family Parish</string>
    <string name="bolo_desc">Holy Family Parish is a Catholic church located in Bolo, Batangas, Philippines. The church is dedicated to the Holy Family of Jesus, Mary, and Joseph. It was established in 1961 and has become an important religious center in the area. The church building has a simple and traditional design and features a bell tower and stained glass windows. The parish offers daily mass, confession, and other religious services and activities. It has a choir, a youth ministry, and various religious groups and organizations. The parish also provides social services to the community, including assistance to the poor and the sick. Overall, Holy Family Parish is a welcoming and active religious community that serves the spiritual and social needs of Bolo, Batangas.</string>
    <string name="bolo_googleSearch">https://www.google.com/search?q=Bolo+-+Holy+Family+Parish&amp;client=firefox-b-d&amp;sxsrf=AJOqlzXIYdtLczbe8jH8nCC1H0cXNnDc5Q%3A1677836224190&amp;ei=wL8BZM6jC-C93LUPhpmdmA0&amp;ved=0ahUKEwjOg4mBu7_9AhXgHrcAHYZMB9MQ4dUDCA8&amp;uact=5&amp;oq=Bolo+-+Holy+Family+Parish&amp;gs_lcp=Cgxnd3Mtd2l6LXNlcnAQAzIKCAAQRxDWBBCwAzIKCAAQRxDWBBCwA0oECEEYAFC9Ali9AmChBGgBcAF4AIABAIgBAJIBAJgBAKABAqABAcgBAsABAQ&amp;sclient=gws-wiz-serp</string>
    <string name="bolo_maps">https://www.google.com/maps/place/Holy+Family+Parish+Church/@13.7903892,120.98203,15z/data=!4m2!3m1!1s0x0:0x15934e08eca2c589?sa=X&amp;ved=2ahUKEwj7ysOpu7_9AhXzmuYKHXP_AcYQ_BJ6BAhJEAg</string>
    <string name="sanPascual">San Pascual - Baylon Parish</string>
    <string name="sanPascual_desc">Baylon Parish is a Catholic church located in San Pascual, Batangas, Philippines. The church is dedicated to Saint Vincent Ferrer and Saint Joseph, the patron saints of the parish. The church was established in 1913 and has become a significant religious center in the area. The parish has a simple yet elegant design and features a bell tower and a large crucifix. It offers daily mass, confession, and other religious services and activities, and has a choir, a youth ministry, and various religious groups and organizations. The parish also provides social services to the community, including assistance to the poor and the sick. Overall, Baylon Parish is a welcoming and active religious community that plays an important role in the spiritual and social life of San Pascual, Batangas.</string>
    <string name="sanPascual_googleSearch">https://www.google.com/search?q=San+Pascual+Baylon+Parish&amp;oq=San+Pascual+Baylon+Parish&amp;aqs=edge..69i57j69i60.1080j0j1&amp;sourceid=chrome&amp;ie=UTF-8</string>
    <string name="sanPascual_maps">https://www.google.com/maps/place/San+Pascual+Baylon+Parish+Church/@13.7836418,121.02897,15z/data=!4m2!3m1!1s0x0:0x800eebeb7d1dbee3?sa=X&amp;ved=2ahUKEwjnp-q_u7_9AhXzDLcAHUTvC-0Q_BJ6BQiQARAI</string>
    <string-array name="time_array">
        <item>6:00 - 7:00 AM</item>
        <item>7:00 - 8:00 AM</item>
        <item>1:00 - 2:00 PM</item>
        <item>2:00 - 3:00 PM</item>
        <item>3:00 - 4:00 PM</item>
        <item>4:00 - 5:00 PM</item>
        <item>5:00 - 6:00 PM</item>
    </string-array>
    <string-array name="church_array">
        <item>Bauan - Immaculate Concepcion Parish</item>
        <item>Aplaya - Our Mother of Perpetual Help Parish</item>
        <item>Bolo - Holy Family Parish</item>
        <item>San Pascual - Baylon Parish</item>
    </string-array>
</resources>