<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/camera"
        android:title="@string/camera"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        app:cnb_iconColor="@color/blue"/>
    <item android:id="@+id/nav_gallery"
        android:title="@string/gallery"
        android:icon="@drawable/ic_baseline_photo_library_24"
        app:cnb_iconColor="@color/blue"/>
    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"
        app:cnb_iconColor="@color/blue"/>
    <item android:id="@+id/nav_calendar"
        android:title="@string/calendar"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        app:cnb_iconColor="@color/blue"/>
    <item android:id="@+id/nav_receipts"
        android:title="@string/receipts"
        android:icon="@drawable/ic_baseline_receipt_24"
        app:cnb_iconColor="@color/blue"/>
</menu>