<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_toRightOf="@id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/ic_baseline_sort_24" />

        <RadioGroup
            android:id="@+id/radioGroupSort"
            android:layout_marginTop="10dp"
            android:layout_below="@id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rbApproved"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/approved"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rbDeclined"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/declined"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rbAllLists"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/all_pending"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/black" />
        </RadioGroup>


    </RelativeLayout>

</androidx.cardview.widget.CardView>