<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_main"
    tools:context=".LoginSignUp.WelcomeScreenFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/church_bg"
        android:alpha="0.2"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/cliurches_logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cliurches"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_regular"
            android:layout_marginTop="10dp"
            android:textSize="30sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/nunito_extrabold"
            android:textColor="@color/blue_main"
            android:text="@string/login"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/nunito_extrabold"
            android:textColor="@color/blue_main"
            android:text="@string/register"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>